Fixed the responsiviness overflow bug
Just added the flex wrap: wrap so the nav content could wrap and star a new line.
Not the most beautiful, bur functiuonal

--- a/css/sytles.css
+++ b/css/sytles.css
@@ -40,11 +40,12 @@ a:active {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     background-color: #E9EAE7;
 }
 
 .logo {
-    max-height: 240px;
+    max-height: 200px;
     width: auto;
     flex-shrink: 1;
 }
